2016-10-17  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Prepare and tag mingwrt-3.22.4 patch release.

	* configure.ac (AC_INIT): Increment patch level.

2016-10-17  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Resolve an ANSI mode <string.h> vs. <wchar.h> conflict.

	* include/wchar.h [!(_WCHAR_H && _STRING_H)]: Change condition...
	[!(_WCHAR_H && (_STRING_H && !__STRICT_ANSI__))]: ...to this; the
	guarded declarations are not exposed by including <string.h> when...
	[__STRICT_ANSI__]: ...this is defined; hence, we must declare them
	when including <wchar.h>, even after including <string.h>

2016-10-13  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Prepare and tag mingwrt-3.22.3 patch release.

	* configure.ac (AC_INIT): Increment patch level.

2016-10-13  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Emulate glibc <string.h> POSIX.1 non-compliance.

	* include/_mingw.h.in (_EMULATE_GLIBC): New feature test macro.
	[_GNU_SOURCE || _BSD_SOURCE || !__STRICT_ANSI__]: Enable it when...
	[_XOPEN_SOURCE || _POSIX_C_SOURCE || _POSIX_SOURCE]: ...none of
	these have been pre-defined by the user.

	* include/string.h [_EMULATE_GLIBC]: Include <strings.h> in full...
	(strcasecmp, strncasecmp): ...so prototypes for these are declared.
	[!_EMULATE_GLIBC]: Preserve partial <strings.h> include, guarded by...
	[__STRING_H_SOURCED__]: ...this context selector, so suppressing the
	declarations of those function prototypes.

2016-10-13  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Resolve some non-ANSI typedef omissions.

	* include/sys/types.h (off_t, ssize_t): Always typedef them when...
	[_POSIX_C_SOURCE || !_NO_OLDNAMES]: ...either of these prevails.

	* include/io.h (_fsize_t): Do not suppress its typedef when...
	[__STRICT_ANSI__]: ...this compiler option applies, irrespective of...
	[!(_IO_H && _WCHAR_H)]: ...this, which otherwise causes supression.

2016-09-20  Keith Marshall  <keithmarshall@users.sourceforge.net>
